--- a/popup/popup.html
+++ b/popup/popup.html
@@ -27,9 +27,11 @@
   </style>
 </head>
 <body>
+  <h2 class="text-center">Browsing Time</h2>
 
-  <h2>Local Storage Items</h2>
-
+  <h5 class="text-center">Today</h5>
+  <h6 class="text-center date-today"></h5>
+  
   <ul class="list-group">
     <!-- The list items will be dynamically added here -->
   </ul>
