--- a/popup/popup.html
+++ b/popup/popup.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <title>Local Storage Items</title>
   <style>
     body {
-      padding: 20px;
-      width: 300px; /* Adjust the width as needed */
+      padding: auto;
+      width: 20rem;
+      /* Adjust the width as needed */
     }
 
     h2 {
@@ -26,15 +30,36 @@
     }
   </style>
 </head>
-<body>
-  <h5 class="text-center">Today</h5>
-  <h6 class="text-center date-today"></h5>
-  <p class="total-today"></span>
-  
-  <ul class="list-group">
-    <!-- The list items will be dynamically added here -->
-  </ul>
 
+<body>
+  <div class="card border-secondary m-1">
+    <div class="card-header">
+      <div class="date text-center" id="date-today"><strong>01 Jan, 2024</strong></div>
+      <p class="total-today text-center">2h 30m 12s</p>
+    </div>
+
+    <ul class="list-group list-group-flush">
+      <!-- li will be added dynamically from ../script/popup.js-->
+
+      <!-- <li class="list-group-item">
+        <div class="row justify-content-between">
+          <div class="col-8" style="text-overflow: ellipsis; text-wrap: nowrap; overflow: hidden;">
+            <a href="#one" style="text-decoration: none;">www.Facebook.com</a>
+          </div>
+          <div class="col-4" style="text-align: end;">
+            2h 30m
+          </div>
+        </div>
+      </li> -->
+    </ul>
+
+    <div class="d-grid gap-2 d-md-block card-footer">
+      <button class="btn btn-outline-secondary btn-sm" id="btn-settings" type="button">
+        <i class="bi bi-gear m-1"></i>Settings
+      </button>
+    </div>
+  </div>
   <script src="../script/popup.js"></script>
 </body>
+
 </html>
