--- a/options.html
+++ b/options.html
@@ -103,7 +103,7 @@
     </div>
   </div>
 
-  <script src="../script/options.js"></script>
+  <script src="../script/options.js" type="module"></script>
 </body>
 
 </html>
