--- a/popup/popup.html
+++ b/popup/popup.html
@@ -28,6 +28,10 @@
     .list-group-item {
       margin-bottom: 5px;
     }
+
+    .active-tab {
+      color: chocolate;
+    }
   </style>
 </head>
 
@@ -59,7 +63,7 @@
       </button>
     </div>
   </div>
-  <script src="../script/popup.js"></script>
+  <script src="../script/popup.js" type="module"></script>
 </body>
 
 </html>
