--- a/options.html
+++ b/options.html
@@ -94,12 +94,18 @@
         </div>
 
         <div class="row mt-2 justify-content-between">
-          <p class="col-8">Don't Redirect on Timeout:</p>
+          <p class="col-8">Lock Site:</p>
           <span class="form-switch form-switch-reverse col-2">
             <input class="form-check-input" type="checkbox" id="s-dont-redirect">
           </span>
         </div>
       </div>
+    </div>
+
+    <div class="text-center card-header">
+      <a href="https://www.github.com/fCat97" target="_blank" rel="noopener noreferrer">
+        Shahriar Zaman
+      </a>
     </div>
   </div>
 
